# aish

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.agents/: progress.md
.github/workflows/: ci.yml  npm-publish.yml
docs/: index.html  script.js  styles.css
examples/: agent-adoption.md  before-after.md  benchmark-output.md  install-transcript.md  npm-demo.md  npm-install-transcript.md
src/: agent-rules.js  cli.js  command-observer.js  command-router.js  fs.js  global-routing.js  hook-bash.js  output.js  subprocess.js  terminal.js
src/agentshell/: __init__.py  agent_rules.py  cli.py  fs.py  global_routing.py  output.py  subprocesses.py
src/agentshell/commands/: __init__.py  benchmark.py  build.py  diff.py  doctor.py  init.py  inspect.py  install_agent.py  search.py  skill.py  status.py  test.py  (+2 more)
src/commands/: benchmark.js  build.js  diff.js  doctor.js  init.js  inspect.js  install-agent.js  search.js  skill.js  status.js  test.js  tree.js  view.js
src/parsers/: build.js  generic.js  http.js  index.js  logs.js  test.js
test/: agent-rules.test.js  benchmark.test.js  cli.test.js  e2e.test.js  files.test.js  git.test.js  hook-bash.test.js  package.test.js  site.test.js  subprocess.test.js
test/fixtures/: echo-args.cmd  logs-compose-repetition.txt  logs-high-volume-unique.txt  logs-mixed-multiline.txt
tests/: test_benchmark.py  test_build_command.py  test_cli.py  test_diff.py  test_e2e.py  test_init_doctor.py  test_inspect.py  test_search.py  test_status.py  test_test_command.py  test_tree.py  test_view.py
(+9 files in other folders)
