[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshell"
version = "0.1.0"
description = "Token-optimized terminal command wrappers for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AgentShell contributors" }]
keywords = ["ai", "cli", "agents", "terminal", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
aish = "agentshell.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
